# intelligravex

./: .dockerignore  .env.example  .gitignore  Dockerfile  GravexServer.spec  GravexStudio.spec  IntelligravexStudio.spec  README.md  pyproject.toml  start.sh  vercel.json  whatsapp-web-template.html
examples/: embed_demo.html
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/mockups/: integrations-ui-options.html
frontend/public/marketing/: app.js  index.html  styles.css
frontend/src/: App.tsx  auth.ts  index.css  types.ts  widget.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/sidecar/: GravexStudio
frontend/src-tauri/src/: main.rs
frontend/src/api/: client.ts
frontend/src/audio/: player.ts  recorder.ts
frontend/src/components/: AuthGate.tsx  BotGitIntegrationsPanel.tsx  BotSettingsModal.tsx  InlineHelpTip.tsx  (+5 more)
macos/overlay/: GravexOverlay.icns  Info.plist  main.m  main.swift
marketing/: app.js  index.html  styles.css
mock_api/: __main__.py  app.py
packaging/data-agent/: Dockerfile
run_and_split/: .gitignore  Dockerfile.codex  README.md  config.example.json  go.mod  main.go
scripts/: build_data_agent_image.sh  build_ui.ps1  build_ui.sh  build_widget_app.sh  install_macos_autostart.sh  package_linux_appimage.sh  package_macos.sh  package_macos_overlay.sh  package_windows.ps1  uninstall_macos_autostart.sh
tests/: test_export_http_response_tool_schema.py  test_http_request_tool_schema.py  test_recall_http_response_tool_schema.py  test_schedule_job_tool_schema.py  test_sentence_chunker.py  test_set_metadata_tool_schema.py  test_web_search_google_parse.py
voicebot/: __init__.py  __main__.py  cli.py  config.py  crypto.py  db.py  downloads.py  launcher.py  local_models.json  local_runtime.py  logging_utils.py  models.py  store.py
voicebot/asr/: openai_asr.py  whisper_asr.py
voicebot/audio/: devices.py  mic.py  pcm.py  playback.py  vad.py
voicebot/compat/: __init__.py  torch_mps.py
voicebot/data_agent/: Dockerfile  docker_runner.py  docker_runner_auth.py  docker_runner_constants.py  docker_runner_containers.py  docker_runner_exec.py  docker_runner_names.py  docker_runner_ports.py  docker_runner_run.py  docker_runner_stream.py
voicebot/dialog/: session.py
voicebot/llm/: codex_http_agent.py  codex_http_agent_export.py  codex_http_agent_helpers.py  codex_http_agent_one_shot.py  codex_http_agent_run.py  codex_oauth_llm.py  codex_saved_runs.py  conversation_artifacts.py  openai_compat_llm.py  openai_llm.py  openrouter_llm.py
voicebot/tools/: __init__.py  data_agent.py  export_http_response.py  http_request.py  recall_http_response.py  schedule_job.py  set_metadata.py  web_search.py
voicebot/tts/: openai_tts.py  xtts.py
voicebot/utils/: prompt.py  python_postprocess.py  template.py  text.py  tokens.py
voicebot/web/: app.py  app_factory.py  constants.py  deps.py  schemas.py  state.py
(+76 files in other folders)
